kubernetes/netology-depl23.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtool-pod
  labels:
    app: mtool-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mtool-pod
  template:
    metadata:
      labels:
        app: mtool-pod
    spec:
      containers:
        - image: wbitt/network-multitool
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nginx-index
              mountPath: /usr/share/nginx/html/
          name: network-multitool
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
      - name: nginx-index
        configMap:
          name: netology-configmap
