kubernetes/combo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: combo-svc
spec:
  ports:
    - name: web-nginx
      port: 9001
      targetPort: 80
    - name: web-mtools
      port: 9002
      targetPort: 8080
  selector:
    app: ntlg-dpl
