kubernetes/ext-bknd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-bknd-svc
spec:
  ports:
    - name: web-mtools
      port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: backend
  type: NodePort
