kubernetes/ext-combo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-combo-svc
spec:
  ports:
    - name: web-nginx
      port: 9001
      targetPort: 80
      nodePort: 30080
    - name: web-mtools
      port: 9002
      targetPort: 8080
      nodePort: 30880
  selector:
    app: ntlg-dpl
  type: NodePort
