kubernetes/mtool-svc-23.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtool-svc
spec:
  type: NodePort
  selector:
    app: mtool-pod
  ports:
    - name: web-mtools
      port: 80
      targetPort: 80
      nodePort: 30880
