kubernetes/multitool-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
  selector:
    app: multitool
