kubernetes/nginx-svc-23.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: web-nginx
      port: 80
      targetPort: 80
