kubernetes/ingress-23-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-https
  namespace: default
spec:
  ingressClassName: public
  tls:
    - hosts:
        - microk8s
      secretName: nginx-tls
  rules:
    - host: microk8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
